tests/algorithms/x/Java/sorts/quick_sort_3_partition.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden972_quick_sort_3_partition3236759555/001/Main.java:88: error: method concat in class Main cannot be applied to given types;
        Object result = concat(sorted_less, equal);
                        ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden972_quick_sort_3_partition3236759555/001/Main.java:89: error: method concat in class Main cannot be applied to given types;
        result = concat(result, sorted_greater);
                 ^
  required: T[],T[]
  found:    Object,int[]
  reason: cannot infer type-variable(s) T
    (argument mismatch; Object cannot be converted to T[])
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden972_quick_sort_3_partition3236759555/001/Main.java:90: error: incompatible types: Object cannot be converted to int[]
        return result;
               ^
3 errors
